# my-sdl2-game

./: .gitmodules  CMakeLists.txt  main.c
